--- a/add-section.component.css
+++ b/add-section.component.css
@@ -1,14 +1,13 @@
 .card{
     width: 400px;
-    border:2px solid black;
 }
-input[type=text]{
-    border:2px solid black;
-}
+
 #section input[type=text]{
     height:150px;
 }
 #button{
     width:350px;
+}
+.card, .btn , .form-control{
     border:2px solid black;
 }
